# untitled_files

./: .dockerignore  Cargo.toml  Dockerfile
files_database/migrations/2024-08-06-025033_alter_user_id/: down.sql  up.sql
files_database/migrations/2024-08-06-031855_create_size/: down.sql  up.sql
files_database/migrations/2024-08-17-220616_create_verification_states/: down.sql  up.sql
files_database/migrations/2024-08-20-001344_verification_states_primary_key/: down.sql  up.sql
files_database/migrations/2024-08-21-023121_reference_counts/: down.sql  up.sql
k8/: deploy.yaml  postgres_deploy.yaml  postgres_service.yaml  postgres_volume.yaml  postgres_volume_claim.yaml  service.yaml
src/: configuration.rs  file_format.rs  lib.rs  main.rs  routes.rs
src/axum/extractors/: format_verification.rs  metadata_extraction.rs  metadata_repository.rs  mod.rs  persistor.rs  reference_count_repository.rs  stl_verification.rs  verification_repository.rs
src/format_verification/: channel.rs  error.rs  message.rs  mod.rs
src/host/: configuration.rs  mod.rs
src/host/axum/extractors/: metadata_repository.rs  mod.rs  persistor.rs
src/host/repository/metadata/: postgres.rs
src/host/web/: routes.rs
src/metadata_extraction/: channel.rs  error.rs  message.rs  mod.rs
src/persist/: disk.rs  error.rs  mod.rs
src/reference_counting/: channel.rs  error.rs  message.rs  mod.rs
src/repository/: deadpool.rs  mod.rs  postgres.rs
src/repository/metadata/: mod.rs  postgres.rs  redis.rs
src/repository/reference_counts/: mod.rs  postgres.rs
src/repository/verification/: mod.rs  postgres.rs
src/stl_verification/: channel.rs  error.rs  message.rs  mod.rs  stl.rs
src/web/: create_file.rs  get_by_id.rs  get_verification_by_id.rs  list_metadata.rs  mod.rs  reference_counts.rs  response.rs  routes.rs
tf/: ecr.tf
